conformance_test/core_language_tests/positive_tests/21_configuration_operations/2101_connection_operations/210102_disconnect_and_unmap_operations/NegSem_210102_disconnect_and_unmap_operations_003.ttcn
/******************************************************************************
 * Copyright (c) ETSI 2017.
 *
 * This file is subject to copyrights owned by ETSI. Non-exclusive permission
 * is hereby granted, free of charge, to copy, reproduce and amend this file
 * under the following conditions: It is provided "as is", without warranty of any
 * kind, expressed or implied.
 * 
 * ETSI shall never be liable for any claim, damages, or other liability arising
 * from its use or inability of use.This permission does not apply to any documentation
 * associated with this file for which ETSI keeps all rights reserved. The present
 * copyright notice shall be included in all copies of whole or part of this
 * file and shall not imply any sub-license right.
 *
 * Modified by: Adrien Kirjak
 *
 ** @version  0.0.1
 ** @purpose  1:21.1.2, Verify that unmapping all ports of all components is not possible in PTC
 ** @verdict  pass reject
 ***************************************************/

// The following requirements are tested:
// The all component keyword ... shall only be used by the MTC.

module NegSem_210102_disconnect_and_unmap_operations_003 {
  
    type port P message {
        inout integer
    } with {extension "internal"}

    type component GeneralComp
    {
        port P p;
    }
	
	function f() runs on GeneralComp {
		unmap(all component:all port); // error: allowed in PTC only
		setverdict(pass);
	}
	
    testcase TC_NegSem_210102_disconnect_and_unmap_operations_003() runs on GeneralComp system GeneralComp {
        var GeneralComp v_ptc := GeneralComp.create;	
        map(self:p, system:p);
		map(v_ptc:p, system:p);
        v_ptc.start(f());
		v_ptc.done; // wait for the PTC to finish
    }
    control{
        execute(TC_NegSem_210102_disconnect_and_unmap_operations_003());
    }
}

